# HNSW-CS-328

./: .gitignore  ARCHITECTURE.md  README.md  RESULTS.md  app.py  generate_comparison.py  main.py  pyproject.toml  requirements.txt  setup.py  show_results.py
.github/workflows/: tests.yml
artifacts/current_20260418_100939/results/: default_vs_learned.csv  final_report_summary.md  multi_objective_history.csv  optimization_history.csv  parameter_sweeps.csv  pareto_ranked_report.csv  pareto_ranked_report.md
artifacts/synthetic/data/ground_truth/: ground_truth.npy
artifacts/synthetic/results/: default_vs_learned.csv  final_report_summary.md  multi_objective_history.csv  optimization_history.csv  parameter_sweeps.csv  pareto_ranked_report.csv  pareto_ranked_report.md
configs/: default.yaml
data/benchmarks/glove100/: base.npy  ground_truth.npy  query.npy
data/benchmarks/sift1m/: ground_truth.npy  query.npy
results/dataset_results/baseline_test/: baseline_20260420T201114Z.csv
results/dataset_results/grid_test/: grid_search_20260420T201204Z.csv
results/dataset_results/quick_test/: quick_test_20260420T200840Z.csv
results/final_results/baseline/: baseline_20260420T192058Z.csv
results/final_results/bayesian/: bayesian_results.csv
results/final_results/grid/: grid_search_results.csv
results/final_results/multi_objective/: multi_objective_pareto.csv
results/final_results/random/: random_search_results.csv
src/: __init__.py  cli.py  dataset_cli.py  dataset_loader.py  evaluation.py  exact_knn.py  experiments.py  grid_search.py  hnsw_index.py  optimization.py  random_search.py  visualization.py
