[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hnsw-cs328"
version = "2.0.0"
description = "Data-driven parameter optimization for HNSW approximate nearest neighbor search"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "CS-328 Team", email = "team@hnsw-cs328.local"},
]
keywords = ["hnsw", "approximate-nearest-neighbor", "parameter-optimization", "bayesian", "optuna"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "hnswlib>=0.8.0",
    "optuna>=3.6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "PyYAML>=6.0",
    "h5py",
    "typer[all]>=0.9.0",
    "mlflow>=2.10.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hnsw-cs328"
Documentation = "https://hnsw-cs328.readthedocs.io"
Repository = "https://github.com/yourusername/hnsw-cs328.git"
Issues = "https://github.com/yourusername/hnsw-cs328/issues"

[project.scripts]
hnsw-optimize = "src.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]
